# ml-fun

./: .gitignore  CLAUDE.md  Cargo.toml  RFC_README.md
ml-with-rust-book/ch2-read-csv/: Cargo.toml
ml-with-rust-book/ch2-read-csv/src/: main.rs
src/: main.rs  testing_data.rs  training_data.rs
titanic/: .gitignore  CLAUDE.md  Cargo.toml  README.md
titanic/src/: conversions.rs  data.rs  main.rs  random_forest.rs
