[package]
name = "titanic-ml"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
linfa.workspace = true
linfa-ensemble = "0.8.0"
linfa-trees = "0.8.0"
ndarray.workspace = true
polars = { workspace = true, features = ["lazy", "to_dummies"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
